# liteginx

./: Cargo.toml  README.md  config.env
examples/: httpexample.py
examples/tcpexample/: go.mod  main.go
fixtures/: one.yaml  three.yaml  two.yaml
src/: conf.rs  main.rs  prelude.rs
src/cmd/: mod.rs
src/pkg/: conf.rs  mod.rs
src/pkg/conf/: mod.rs  spec.rs  state.rs
src/pkg/conf/fixtures/liteginx/: one.yaml  redis.yaml  tcptest.yaml  two.yaml
src/pkg/server/: downstream.rs  helpers.rs  http.rs  loader.rs  mod.rs  proxy.rs  tcp.rs  upstream.rs
src/pkg/server/proxy/: downstream.rs  mod.rs  upstream.rs
src/pkg/spec/: config.rs  loader.rs  mod.rs  routes.rs
