[package]
name = "liteginx"
version = "0.1.0"
edition = "2021"

[dependencies]
matchit = "0.8.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["default", "tracing"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
tracing-test = "0.2.5"
config = "0.15.6"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
futures = "0.3.31"
clap = { version = "4.5.31", features = ["derive"] }
tokio-test = "0.4.4"
thiserror = "2.0.11"
getrandom = "0.3.1"
rand = "0.9.0"
